--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="title_activity_compte">Compte</string>
     <string name="title_activity_choix_conversation">ChoixConversation</string>
     <string name="title_activity_show_conversation">ShowConversation</string>
+    <string name="message">Nouveau message…</string>
 
     <string-array name="couleurs">
         <item>red</item>
