Added menu to all views + menus accessing only when logged

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="passe">Mot de passe : </string>
     <string name="ok">OK</string>
     <string name="monCompte">Mon Compte</string>
+    <string name="createAccount">Créer Compte</string>
     <string name="couleur">Couleur Préférée : </string>
     <string name="choixConversation">Choix Conversation</string>
     <string name="conversation">Conversation</string>
